# aaron_zavrsni

./: README.md
CubicTrajectroyGenerator/: CMakeLists.txt  cubic_trajectory_generator.cpp  cubic_trajectory_generator.h  move_robot.cpp
FrankaControl/: CMakeLists.txt
FrankaControl/include/shared/: first_motion.h  joint_position.h  joint_states.h
FrankaControl/src/: examples_common.cpp
FrankaControl/src/first_motion/: first_motion.cpp  first_motion_main.cpp
FrankaControl/src/motion_generator/: motion_generator.cpp
FrankaControl/src/movement_joint/: joint_position.cpp  joint_position_main.cpp
FrankaControl/src/robot_comm/: joint_states.cpp  joint_states_main.cpp
coordinate_motion_generator/: CMakeLists.txt  cmg_test_run.cpp  coordinate_motion_generator.cpp  coordinate_motion_generator.h
feed_forward/: CMakeLists.txt  examples_common.h  feed_forward_control.cpp  feed_forward_control.py
franka_control/: CMakeLists.txt
franka_control/src/: joint_states.cpp  joint_states_main.cpp
graph_joints/: CMakeLists.txt  examples_common.cpp  write_joint_states.cpp
graph_velocities/: CMakeLists.txt  examples_common.cpp  plot_velocity_states.py  write_velocity_states.cpp
linear_velocity/: linear_velocity.cpp  tcp_positions.py
scmg/: scmg.cpp  scmg.h
tcp_mg/: plot_joint_states.py  tcp_mg.cpp  tcp_mg_tester.cpp
